tests/NormalTests/paczka1/fuzzy1/71579567.err
Error in line 1: KpBrPqBAl9K A518 75,6
Error in line 16: 3mTDZ9Le3 A518 63,8
Error in line 15: uILEMn A83 58,2
Error in line 18: KpBrPqBAl9K A83 71,5
Error in line 13: OVulCRknjw3 A83 44,4
Error in line 37: uILEMn A929 23,1
